--- a/index.html
+++ b/index.html
@@ -8,34 +8,48 @@
 <body>
     <header>
         <h1>My Recipe</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, rem cumque vel, facilis quaerat laudantium iusto quam doloribus voluptates eveniet doloremque quibusdam non maiores harum qui explicabo dolore corrupti alias.</p>
+        <p>The go-to website for food enthusiasts!</p>
     </header>
     <main style="padding: 0 15%;">
-        <h1>My Summer Recipe</h1>
+        <h1>Pizza Dough</h1>
+        A simple and handy pizza dough recipe
+        <br/><br/>
         <section style="display: flex;" >
-            <img src="./assets/pizza-one.jpg" alt="a pizza dow" style="width: 50%;">
-            <img src="./assets/pizza-two.jpg" alt="pizza" style="width: 50%;">
+            <img src="./assets/pizza-one.jpg" alt="a pizza dough" style="width: 50%;">
+            <img src="./assets/pizza-two.jpg" alt="pizzas with ingredients" style="width: 50%;">
         </section>
         <section>
             <h2>Ingredients</h2>
             <ul>
-                <li>xx</li>
-                <li>xx</li>
-                <li>xx</li>
+                <li>3 dl kallt vatten</li>
+                <li>1/3  paket jäst (1/4 paket motsvarar ca 12 g)</li>
+                <li>2 tsk socker</li>
+                <li>2 msk olivolja</li>
+                <li>1 1/2 tsk salt</li>
+                <li>7 - 7 1/2 dl vetemjöl (7 1/2 dl motsvarar ca 450 g)</li>
+                <li>vetemjöl till utbakning</li>
             </ul>
         </section>
         <section>
             <h2>Instructions</h2>
             <ol>
-                <li>xx</li>
-                <li>xx</li>
-                <li>xx</li>
+                <li>Smula jästen i en stor bunke.</li>
+                <li>Tillsätt vatten, socker, olja och salt.</li>
+                <li>Rör tills jästen har löst sig.</li>
+                <li>Tillsätt mjölet lite i taget och arbeta degen 5–10 minuter för hand.</li>
+                <li>Täck bunken med bakduk eller plastfolie och låt degen jäsa i kylen 12–24 timmar.</li>
             </ol>
+        </section>
+        <section>
+            <h2>Reference</h2>
+            <a href="https://www.ica.se/recept/hembakt-pizza-pa-italienskt-vis-713095/">This recipe is taken from www.ica.se</a>
         </section>
     </main>
     <footer>
         <h1>Contact</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ex omnis, expedita animi cumque facere accusantium modi quaerat eius repellat hic, excepturi cum debitis placeat eos eligendi. Neque, deserunt magnam?</p>
+        <p>Mail: mail.com</p>
+        <p>Phone: xxx</p>
     </footer>
 </body>
 </html>
