--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
         <h1>Pizza Dough</h1>
         A simple and handy pizza dough recipe
         <br/><br/>
-        <section style="display: flex;" >
+        <section style="display: flex;">
             <img src="./assets/pizza-one.jpg" alt="a pizza dough" style="width: 50%;">
             <img src="./assets/pizza-two.jpg" alt="pizzas with ingredients" style="width: 50%;">
         </section>
         <section>
             <h2>Ingredients</h2>
             <ul>
-                <li>3 dl kallt vatten</li>
-                <li>1/3  paket jäst (1/4 paket motsvarar ca 12 g)</li>
-                <li>2 tsk socker</li>
-                <li>2 msk olivolja</li>
-                <li>1 1/2 tsk salt</li>
-                <li>7 - 7 1/2 dl vetemjöl (7 1/2 dl motsvarar ca 450 g)</li>
-                <li>vetemjöl till utbakning</li>
+                <li>3 dl cold water</li>
+                <li>1/3 package of yeast (1/4 package corresponds to approx. 12 g)</li>
+                <li>2 teaspoons of sugar</li>
+                <li>2 tbsp olive oil</li>
+                <li>1 1/2 teaspoons salt</li>
+                <li>7 - 7 1/2 dl wheat flour (7 1/2 dl corresponds to approx. 450 g)</li>
+                <li>wheat flour for baking</li>
             </ul>
         </section>
         <section>
             <h2>Instructions</h2>
             <ol>
-                <li>Smula jästen i en stor bunke.</li>
-                <li>Tillsätt vatten, socker, olja och salt.</li>
-                <li>Rör tills jästen har löst sig.</li>
-                <li>Tillsätt mjölet lite i taget och arbeta degen 5–10 minuter för hand.</li>
-                <li>Täck bunken med bakduk eller plastfolie och låt degen jäsa i kylen 12–24 timmar.</li>
+                <li>Crumble the yeast in a large bowl.</li>
+                <li>Add water, sugar, oil and salt.</li>
+                <li>Stir until the yeast has dissolved.</li>
+                <li>Add the flour a little at a time and work the dough for 5–10 minutes by hand.</li>
+                <li>Cover the bowl with a baking sheet or plastic wrap and let the dough rise in the fridge for 12–24 hours.</li>
             </ol>
         </section>
         <section>
