--- a/index.html
+++ b/index.html
@@ -4,50 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Recipe</title>
+    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="style/search.css">
 </head>
 <body>
     <header>
         <h1>My Recipe</h1>
         <p>The go-to website for food enthusiasts!</p>
     </header>
-    <main style="padding: 0 15%;">
-        <h1>Pizza Dough</h1>
-        A simple and handy pizza dough recipe
-        <br/><br/>
-        <section style="display: flex;">
-            <img src="./assets/pizza-one.jpg" alt="a pizza dough" style="width: 50%;">
-            <img src="./assets/pizza-two.jpg" alt="pizzas with ingredients" style="width: 50%;">
-        </section>
-        <section>
-            <h2>Ingredients</h2>
-            <ul>
-                <li>3 dl cold water</li>
-                <li>1/3 package of yeast (1/4 package corresponds to approx. 12 g)</li>
-                <li>2 teaspoons of sugar</li>
-                <li>2 tbsp olive oil</li>
-                <li>1 1/2 teaspoons salt</li>
-                <li>7 - 7 1/2 dl wheat flour (7 1/2 dl corresponds to approx. 450 g)</li>
-                <li>wheat flour for baking</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Instructions</h2>
-            <ol>
-                <li>Crumble the yeast in a large bowl.</li>
-                <li>Add water, sugar, oil and salt.</li>
-                <li>Stir until the yeast has dissolved.</li>
-                <li>Add the flour a little at a time and work the dough for 5–10 minutes by hand.</li>
-                <li>Cover the bowl with a baking sheet or plastic wrap and let the dough rise in the fridge for 12–24 hours.</li>
-            </ol>
-        </section>
-        <section>
-            <h2>Reference</h2>
-            <a href="https://www.ica.se/recept/hembakt-pizza-pa-italienskt-vis-713095/">This recipe is taken from www.ica.se</a>
-        </section>
+    <main class="centerContainer">
+        <form action="" class="searchForm">
+            <input
+            type="text"
+            placeholder="search recipe..."
+            minlength="1"
+            required
+            class="searchForm__input">
+            <section class="searchResult">
+                <ul>
+                    <li class="searchResult__link"><a
+                        href="recipe.html" >
+                        Pizza Dough
+                    </a></li>
+                    <li class="searchResult__link"><a
+                        href="recipe.html" >
+                        Pizza Dough
+                    </a></li>
+                    <li class="searchResult__link"><a
+                        href="recipe.html" >
+                        Pizza Dough
+                    </a></li>
+                </ul>
+            </section>
+        </form>
     </main>
     <footer>
         <h1>Contact</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ex omnis, expedita animi cumque facere accusantium modi quaerat eius repellat hic, excepturi cum debitis placeat eos eligendi. Neque, deserunt magnam?</p>
         <p>Mail: mail.com</p>
         <p>Phone: xxx</p>
     </footer>
